--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1724,10 +1724,16 @@ jobs:
         name: Write builder layer cache keys
     - restore_cache:
         keys:
+        - cache001-build-ui_b5ee_{{checksum ".buildcache/cache-keys/build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0"}}
+        - cache001-ui-dependencies_31de_{{checksum ".buildcache/cache-keys/ui-dependencies-31deb73a3179758b5ddba202c6ec27f3010104ea"}}
+        - cache001-install-yarn_0dd0_{{checksum ".buildcache/cache-keys/install-yarn-0dd03ba30a75bc7b6bb05d9fadff96a844be0454"}}
+        - cache001-set-workdir_1792_{{checksum ".buildcache/cache-keys/set-workdir-17921c19d37884b73fc9ca8dd83e0fc552532b10"}}
+        - cache001-install-go-tools_cbd7_{{checksum ".buildcache/cache-keys/install-go-tools-cbd71349f0f0fb3f1cb812c9459fee307caac394"}}
+        - cache001-install-go_5172_{{checksum ".buildcache/cache-keys/install-go-5172940f5c97a0e1f9d65002c64424c46f95bb8a"}}
         - cache001-base_3173_{{checksum ".buildcache/cache-keys/base-31734631257b3779d02665ecc77e06482f6104e8"}}
     - run:
         command: |
-          if [ -f .buildcache/archives/00-base-31734631257b3779d02665ecc77e06482f6104e8.tar.gz ]; then
+          if [ -f .buildcache/archives/06-build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0.tar.gz ]; then
             echo "Exact match found in cache, skipping build."
             circleci-agent step halt
           else
@@ -1736,13 +1742,61 @@ jobs:
         name: Finish early if loaded exact match from cache.
     - run:
         command: |
-          LAYER_SPEC_ID=00-base-31734631257b3779d02665ecc77e06482f6104e8 make -C packages*.lock load-builder-cache
+          LAYER_SPEC_ID=06-build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0 make -C packages*.lock load-builder-cache
         name: Load whatever builder cache we have (if any) into the Docker daemon
         no_output_timeout: 30m
     - run:
         command: make -f packages*.lock/layer.mk 00-base-31734631257b3779d02665ecc77e06482f6104e8-image
     - run:
-        command: make -f packages*.lock/layer.mk 00-base-31734631257b3779d02665ecc77e06482f6104e8-save
+        command: make -f packages*.lock/layer.mk 01-install-go-5172940f5c97a0e1f9d65002c64424c46f95bb8a-image
+    - run:
+        command: make -f packages*.lock/layer.mk 02-install-go-tools-cbd71349f0f0fb3f1cb812c9459fee307caac394-image
+    - run:
+        command: make -f packages*.lock/layer.mk 03-set-workdir-17921c19d37884b73fc9ca8dd83e0fc552532b10-image
+    - run:
+        command: make -f packages*.lock/layer.mk 04-install-yarn-0dd03ba30a75bc7b6bb05d9fadff96a844be0454-image
+    - run:
+        command: make -f packages*.lock/layer.mk 05-ui-dependencies-31deb73a3179758b5ddba202c6ec27f3010104ea-image
+    - run:
+        command: make -f packages*.lock/layer.mk 06-build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0-image
+    - run:
+        command: make -f packages*.lock/layer.mk 06-build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0-save
+    - save_cache:
+        key: cache001-build-ui_b5ee_{{checksum ".buildcache/cache-keys/build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0"}}
+        paths:
+        - .buildcache/archives/06-build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0.tar.gz
+    - run:
+        command: mv .buildcache/archives/06-build-ui-b5ee0cfe233357f42f808a73c38b51276e2630e0.tar.gz .buildcache/archives/05-ui-dependencies-31deb73a3179758b5ddba202c6ec27f3010104ea.tar.gz
+    - save_cache:
+        key: cache001-ui-dependencies_31de_{{checksum ".buildcache/cache-keys/ui-dependencies-31deb73a3179758b5ddba202c6ec27f3010104ea"}}
+        paths:
+        - .buildcache/archives/05-ui-dependencies-31deb73a3179758b5ddba202c6ec27f3010104ea.tar.gz
+    - run:
+        command: mv .buildcache/archives/05-ui-dependencies-31deb73a3179758b5ddba202c6ec27f3010104ea.tar.gz .buildcache/archives/04-install-yarn-0dd03ba30a75bc7b6bb05d9fadff96a844be0454.tar.gz
+    - save_cache:
+        key: cache001-install-yarn_0dd0_{{checksum ".buildcache/cache-keys/install-yarn-0dd03ba30a75bc7b6bb05d9fadff96a844be0454"}}
+        paths:
+        - .buildcache/archives/04-install-yarn-0dd03ba30a75bc7b6bb05d9fadff96a844be0454.tar.gz
+    - run:
+        command: mv .buildcache/archives/04-install-yarn-0dd03ba30a75bc7b6bb05d9fadff96a844be0454.tar.gz .buildcache/archives/03-set-workdir-17921c19d37884b73fc9ca8dd83e0fc552532b10.tar.gz
+    - save_cache:
+        key: cache001-set-workdir_1792_{{checksum ".buildcache/cache-keys/set-workdir-17921c19d37884b73fc9ca8dd83e0fc552532b10"}}
+        paths:
+        - .buildcache/archives/03-set-workdir-17921c19d37884b73fc9ca8dd83e0fc552532b10.tar.gz
+    - run:
+        command: mv .buildcache/archives/03-set-workdir-17921c19d37884b73fc9ca8dd83e0fc552532b10.tar.gz .buildcache/archives/02-install-go-tools-cbd71349f0f0fb3f1cb812c9459fee307caac394.tar.gz
+    - save_cache:
+        key: cache001-install-go-tools_cbd7_{{checksum ".buildcache/cache-keys/install-go-tools-cbd71349f0f0fb3f1cb812c9459fee307caac394"}}
+        paths:
+        - .buildcache/archives/02-install-go-tools-cbd71349f0f0fb3f1cb812c9459fee307caac394.tar.gz
+    - run:
+        command: mv .buildcache/archives/02-install-go-tools-cbd71349f0f0fb3f1cb812c9459fee307caac394.tar.gz .buildcache/archives/01-install-go-5172940f5c97a0e1f9d65002c64424c46f95bb8a.tar.gz
+    - save_cache:
+        key: cache001-install-go_5172_{{checksum ".buildcache/cache-keys/install-go-5172940f5c97a0e1f9d65002c64424c46f95bb8a"}}
+        paths:
+        - .buildcache/archives/01-install-go-5172940f5c97a0e1f9d65002c64424c46f95bb8a.tar.gz
+    - run:
+        command: mv .buildcache/archives/01-install-go-5172940f5c97a0e1f9d65002c64424c46f95bb8a.tar.gz .buildcache/archives/00-base-31734631257b3779d02665ecc77e06482f6104e8.tar.gz
     - save_cache:
         key: cache001-base_3173_{{checksum ".buildcache/cache-keys/base-31734631257b3779d02665ecc77e06482f6104e8"}}
         paths:
